--- a/w_player/index13.html
+++ b/w_player/index13.html
@@ -90,7 +90,155 @@
             historyList.appendChild(listItem);
         }
 
-        // 初期化処理など（省略、基本的にドラッグ＆ドロップイベントなど既存コードに準拠）
+        const playerList = document.getElementById("playerList");
+        const bench = document.getElementById("bench");
+        const field = document.getElementById("field");
+        const tempOut = document.getElementById("tempOut");
+        const historyList = document.getElementById("history-list");
+        const playerNamesInput = document.getElementById("playerNamesInput");
+        const registerButton = document.getElementById("registerButton");
+
+        const startStopButton = document.getElementById("startStopButton");
+        const resetButton = document.getElementById("resetButton");
+        const timeDisplay = document.getElementById("timeDisplay");
+
+        let timer;
+        let isRunning = false;
+        let seconds = 0;
+        let minutes = 0;
+        let hours = 0;
+
+        // ストップウォッチの動作
+        function startStopwatch() {
+            if (isRunning) {
+                clearInterval(timer);
+                startStopButton.textContent = "スタート";
+            } else {
+                timer = setInterval(() => {
+                    seconds++;
+                    if (seconds === 60) {
+                        seconds = 0;
+                        minutes++;
+                    }
+                    if (minutes === 60) {
+                        minutes = 0;
+                        hours++;
+                    }
+                    timeDisplay.textContent = `${String(hours).padStart(2, '0')}:${String(minutes).padStart(2, '0')}:${String(seconds).padStart(2, '0')}`;
+                }, 1000);
+                startStopButton.textContent = "停止";
+            }
+            isRunning = !isRunning;
+        }
+
+        function resetStopwatch() {
+            clearInterval(timer);
+            isRunning = false;
+            seconds = 0;
+            minutes = 0;
+            hours = 0;
+            timeDisplay.textContent = "00:00:00";
+            startStopButton.textContent = "スタート";
+        }
+
+        // プレイヤーを生成する関数
+        function generatePlayers(playerNames) {
+            playerList.innerHTML = ''; // 既存の選手リストをクリア
+            bench.innerHTML = '';
+            field.innerHTML = '';
+            tempOut.innerHTML = '';
+
+            playerNames.forEach((name, index) => {
+                const player = createPlayerElement(name);
+                playerList.appendChild(createPlayerListElement(name));
+                if (index < 15) {
+                    field.appendChild(player);
+                } else {
+                    bench.appendChild(player);
+                }
+            });
+        }
+
+        // 選手リスト要素を作成
+        function createPlayerListElement(name) {
+            const listItem = document.createElement("div");
+            listItem.textContent = name;
+            return listItem;
+        }
+
+        // 選手要素を作成
+        function createPlayerElement(name) {
+            const player = document.createElement("div");
+            player.className = "player";
+            player.textContent = name;
+            player.draggable = true;
+            player.dataset.name = name;
+            return player;
+        }
+
+        // ドラッグ＆ドロップイベントの設定
+        document.addEventListener("dragstart", event => {
+            if (event.target.classList.contains("player")) {
+                event.target.classList.add("dragging");
+                event.dataTransfer.setData("text/plain", event.target.dataset.name);
+            }
+        });
+
+        document.addEventListener("dragend", event => {
+            if (event.target.classList.contains("player")) {
+                event.target.classList.remove("dragging");
+            }
+        });
+
+        [bench, field, tempOut].forEach(area => {
+            area.addEventListener("dragover", event => {
+                event.preventDefault();
+            });
+
+            area.addEventListener("drop", event => {
+                event.preventDefault();
+                const playerName = event.dataTransfer.getData("text/plain");
+                const player = document.querySelector(`[data-name="${playerName}"]`);
+                if (player && event.currentTarget !== player.parentElement) {
+                    event.currentTarget.appendChild(player);
+                    recordHistory(playerName, area.id);
+                }
+            });
+        });
+
+        // 移動履歴を記録
+        function recordHistory(playerName, targetArea) {
+            const timestamp = timeDisplay.textContent; // ストップウォッチの値を使う
+            const listItem = document.createElement("li");
+
+            if (targetArea === "field") {
+                listItem.textContent = `${timestamp}: ${playerName} が 出場しました。`;
+            } else if (targetArea === "bench") {
+                listItem.textContent = `${timestamp}: ${playerName} が 退場しました。`;
+            } else if (targetArea === "tempOut") {
+                listItem.textContent = `${timestamp}: ${playerName} が 一時OUTしました。`;
+            } else if (targetArea === "field") {
+                listItem.textContent = `${timestamp}: ${playerName} が 一時OUTから復帰しました。`;
+            }
+
+            historyList.appendChild(listItem);
+            historyList.scrollTop = historyList.scrollHeight;
+        }
+
+        // 登録ボタンがクリックされたときの処理
+        registerButton.addEventListener("click", () => {
+            const inputNames = playerNamesInput.value.trim();
+            if (inputNames) {
+                const playerNames = inputNames.split(',').map(name => name.trim()).filter(name => name);
+                generatePlayers(playerNames);
+                playerNamesInput.value = ''; // 入力ボックスをリセット
+            }
+        });
+
+        // ストップウォッチのボタンにイベントを追加
+        startStopButton.addEventListener("click", startStopwatch);
+        resetButton.addEventListener("click", resetStopwatch);
     </script>
 </body>
 </html>
+
