--- a/w_player/index13.html
+++ b/w_player/index13.html
@@ -351,5 +351,6 @@
         startStopButton.addEventListener("click", startStopwatch);
         resetButton.addEventListener("click", resetStopwatch);
     </script>
+    // Claude登場、理由の記載を加えるタスク
 </body>
 </html>
