--- a/w_player/index15.html
+++ b/w_player/index15.html
@@ -124,7 +124,9 @@
     </style>
 </head>
 <body>
-    //original modification of v.14
+    
+    <!-- original modification of v.14 -->
+    
     <div class="container">
         <div class="list" id="playerList">
             <div class="area-title">登録選手</div>
