--- a/w_player/index16.html
+++ b/w_player/index16.html
@@ -16,20 +16,20 @@
         .container {
             display: flex;
             justify-content: space-between;
-            width: 1400px; /* コンテナ幅を1400pxに変更 */
+            width: 90%;
+            max-width: 1400px; /* 修正: 幅を1400pxに拡大 */
             margin-top: 20px;
         }
         .area, .list {
             border: 2px dashed #ccc;
             border-radius: 5px;
-            width: 23%; /* コンテナ幅に合わせて調整 */
+            width: 22%; /* 修正: 各エリアの幅を均等に設定 */
             height: 600px;
             padding: 5px;
             display: flex;
             flex-direction: column;
             align-items: flex-start;
             overflow-y: auto;
-            position: relative;
         }
         .area-title {
             font-weight: bold;
@@ -37,27 +37,12 @@
             text-align: center;
             width: 100%;
         }
-        .player {
-            background-color: #f0f0f0;
+        .history {
             border: 1px solid #ccc;
             border-radius: 5px;
-            padding: 5px;
-            margin: 5px;
-            cursor: grab;
-            width: 170px;
-            text-align: center;
-            font-size: 11px;
-        }
-        .player.dragging {
-            opacity: 0.7;
-        }
-        .history {
-            margin-top: 20px;
-            border: 1px solid #ccc;
+            width: 22%; /* 修正: 他エリアと同じ幅に設定 */
+            height: 600px; /* 修正: 高さを統一 */
             padding: 10px;
-            max-height: 150px;
-            width: 90%;
-            max-width: 800px;
             overflow-y: auto;
             font-size: 14px;
         }
@@ -82,32 +67,6 @@
             margin-top: 10px;
             cursor: pointer;
         }
-        #reasonModal {
-            display: none;
-            position: fixed;
-            z-index: 1000;
-            left: 0;
-            top: 0;
-            width: 100%;
-            height: 100%;
-            overflow: auto;
-            background-color: rgba(0,0,0,0.4);
-            justify-content: center;
-            align-items: center;
-        }
-        .modal-content {
-            background-color: #fefefe;
-            padding: 20px;
-            border: 1px solid #888;
-            width: 300px;
-            text-align: center;
-            border-radius: 10px;
-        }
-        .modal-content select, .modal-content button {
-            margin: 10px 0;
-            padding: 5px;
-            width: 100%;
-        }
     </style>
 </head>
 <body>
@@ -124,42 +83,103 @@
         <div class="area" id="tempOut">
             <div class="area-title">一時退出</div>
         </div>
+        <div class="history" id="history">
+            <strong>移動履歴:</strong>
+            <ul id="history-list"></ul>
+        </div>
     </div>
     <div class="input-container">
         <input type="text" id="playerNamesInput" class="input-box" placeholder="選手名をカンマ区切りで入力">
         <button id="registerButton" class="register-btn">登録</button>
     </div>
-    <div class="history" id="history">
-        <strong>移動履歴:</strong>
-        <ul id="history-list"></ul>
-    </div>
-
     <div class="stopwatch">
         <div id="timeDisplay">00:00:00</div>
         <button id="startStopButton" class="stopwatch-btn">スタート</button>
         <button id="resetButton" class="stopwatch-btn">リセット</button>
     </div>
 
-    <!-- 理由選択モーダル -->
-    <div id="reasonModal" class="modal">
-        <div class="modal-content">
-            <h3>移動理由を選択</h3>
-            <select id="moveReason">
-                <option value="">理由を選択</option>
-                <option value="戦術">戦術</option>
-                <option value="出血">出血</option>
-                <option value="負傷">負傷</option>
-                <option value="HIA">HIA</option>
-                <option value="シンビン">シンビン</option>
-                <option value="復帰">復帰</option>
-                <option value="YC">YC</option>
-                <option value="RC">RC</option>
-                <option value="FPRO">FPRO</option>
-                <option value="-">-</option>
-            </select>
-            <button id="confirmReasonBtn">確定</button>
-            <button id="cancelReasonBtn">キャンセル</button>
-        </div>
-    </div>
+    <script>
+        const playerList = document.getElementById("playerList");
+        const bench = document.getElementById("bench");
+        const field = document.getElementById("field");
+        const tempOut = document.getElementById("tempOut");
+        const historyList = document.getElementById("history-list");
+        const playerNamesInput = document.getElementById("playerNamesInput");
+        const registerButton = document.getElementById("registerButton");
+
+        const startStopButton = document.getElementById("startStopButton");
+        const resetButton = document.getElementById("resetButton");
+        const timeDisplay = document.getElementById("timeDisplay");
+
+        let timer;
+        let isRunning = false;
+        let seconds = 0;
+        let minutes = 0;
+        let hours = 0;
+
+        function startStopwatch() {
+            if (isRunning) {
+                clearInterval(timer);
+                startStopButton.textContent = "スタート";
+            } else {
+                timer = setInterval(() => {
+                    seconds++;
+                    if (seconds === 60) {
+                        seconds = 0;
+                        minutes++;
+                    }
+                    if (minutes === 60) {
+                        minutes = 0;
+                        hours++;
+                    }
+                    timeDisplay.textContent = `${String(hours).padStart(2, '0')}:${String(minutes).padStart(2, '0')}:${String(seconds).padStart(2, '0')}`;
+                }, 1000);
+                startStopButton.textContent = "停止";
+            }
+            isRunning = !isRunning;
+        }
+
+        function resetStopwatch() {
+            clearInterval(timer);
+            isRunning = false;
+            seconds = 0;
+            minutes = 0;
+            hours = 0;
+            timeDisplay.textContent = "00:00:00";
+            startStopButton.textContent = "スタート";
+        }
+
+        function generatePlayers(playerNames) {
+            playerList.innerHTML = '';
+            bench.innerHTML = '<div class="area-title">控え</div>';
+            field.innerHTML = '<div class="area-title">出場</div>';
+            tempOut.innerHTML = '<div class="area-title">一時退出</div>';
+            playerNames.forEach((name, index) => {
+                const player = document.createElement("div");
+                player.className = "player";
+                player.textContent = name;
+                player.draggable = true;
+                player.dataset.name = name;
+                if (index < 15) {
+                    field.appendChild(player);
+                } else {
+                    bench.appendChild(player);
+                }
+            });
+        }
+
+        registerButton.addEventListener("click", () => {
+            const inputNames = playerNamesInput.value.trim();
+            if (inputNames) {
+                const playerNames = inputNames.split(',').map(name => name.trim()).filter(name => name);
+                generatePlayers(playerNames);
+                playerNamesInput.value = '';
+            }
+        });
+
+        startStopButton.addEventListener("click", startStopwatch);
+        resetButton.addEventListener("click", resetStopwatch);
+    </script>
 </body>
 </html>
+
