--- a/w_player/index16.html
+++ b/w_player/index16.html
@@ -23,7 +23,7 @@
         .area, .list {
             border: 2px dashed #ccc;
             border-radius: 5px;
-            width: 22%; /* 修正: 各エリアの幅を均等に設定 */
+            width: 15%; /* 修正: 各エリアの幅を均等に設定 */
             height: 600px;
             padding: 5px;
             display: flex;
@@ -38,13 +38,13 @@
             width: 100%;
         }
         .history {
-            border: 1px solid #ccc;
+            border: 2px dashed #ccc;
             border-radius: 5px;
-            width: 22%; /* 修正: 他エリアと同じ幅に設定 */
+            width: 40%; /* 修正: 他エリアと同じ幅に設定 */
             height: 600px; /* 修正: 高さを統一 */
-            padding: 10px;
+            padding: 5px;
             overflow-y: auto;
-            font-size: 14px;
+            font-size: 12px;
         }
         .input-container {
             margin-top: 20px;
