--- a/w_player/index16.html
+++ b/w_player/index16.html
@@ -84,7 +84,7 @@
             <div class="area-title">一時退出</div>
         </div>
         <div class="history" id="history">
-            <strong>移動履歴:</strong>
+            <div class="area-title">移動履歴</div>
             <ul id="history-list"></ul>
         </div>
     </div>
