--- a/w_player/index16.html
+++ b/w_player/index16.html
@@ -132,13 +132,13 @@
             <div class="area-title">登録選手</div>
         </div>
         <div class="area" id="bench">
-            <div class="area-title">控え</div>
+            <div class="area-title">ベンチ</div>
         </div>
         <div class="area" id="field">
-            <div class="area-title">出場</div>
+            <div class="area-title">ピッチ</div>
         </div>
         <div class="area" id="tempOut">
-            <div class="area-title">一時退出</div>
+            <div class="area-title">ピッチ外</div>
         </div>
     </div>
     <div class="input-container">
