--- a/w_player/v18/index.html
+++ b/w_player/v18/index.html
@@ -48,6 +48,8 @@
                 <option value="YC">YC</option>
                 <option value="RC">RC</option>
                 <option value="FPRO">FPRO</option>
+                <option value="FPRO/YC">FPRO/YC</option>
+                 <option value="FPRO/RC">FPRO/RC</option>               
                 <option value="-">-</option>
             </select>
             <button id="confirmReasonBtn">確定</button>
