--- a/w_player/v19/index.html
+++ b/w_player/v19/index.html
@@ -25,6 +25,14 @@
         <input type="text" id="playerNamesInput" class="input-box" placeholder="選手名をカンマ区切りで入力">
         <button id="registerButton" class="register-btn">登録</button>
     </div>
+<!-- 履歴保存ボタン -->
+<button id="saveButton">履歴保存</button>
+
+<!-- 履歴リセットボタン -->
+<button id="resetButton">履歴リセット</button>
+
+
+    
     <div class="history" id="history">
         <strong>移動履歴:</strong>
         <ul id="history-list"></ul>
