--- a/w_player/v19/index.html
+++ b/w_player/v19/index.html
@@ -25,10 +25,10 @@
         <input type="text" id="playerNamesInput" class="input-box" placeholder="選手名をカンマ区切りで入力">
         <button id="registerButton" class="register-btn">登録</button>
     </div>
-<!-- 履歴保存ボタン -->
-<button id="saveButton">履歴保存</button>
 
-<!-- 履歴リセットボタン -->
+    
+<div id="historyList"></div>    
+<button id="saveButton">履歴保存</button>
 <button id="resetButton">履歴リセット</button>
 
 
