--- a/w_player/v19/index.html
+++ b/w_player/v19/index.html
@@ -27,11 +27,18 @@
     </div>
 
     
-<div id="historyList"></div>    
+<div id="historyList"></div>
+
+<!-- コメント入力フォーム -->
+<div>
+    <textarea id="commentBox" placeholder="コメントを入力"></textarea>
+</div>
+
+<!-- 履歴保存ボタン -->
 <button id="saveButton">履歴保存</button>
+
+<!-- 履歴リセットボタン -->
 <button id="resetButton">履歴リセット</button>
-
-
     
     <div class="history" id="history">
         <strong>移動履歴:</strong>
