--- a/w_player/v19/index.html
+++ b/w_player/v19/index.html
@@ -24,7 +24,8 @@
     <div class="input-container">
         <input type="text" id="playerNamesInput" class="input-box" placeholder="選手名をカンマ区切りで入力">
         <button id="registerButton" class="register-btn">登録</button>
-    </div>
+        <button onclick="saveHTML()">保存</button>
+        <button onclick="resetContent()">リセット</button>    </div>
     <div class="history" id="history">
         <strong>移動履歴:</strong>
         <ul id="history-list"></ul>
