--- a/w_player/v19/index.html
+++ b/w_player/v19/index.html
@@ -24,8 +24,9 @@
     <div class="input-container">
         <input type="text" id="playerNamesInput" class="input-box" placeholder="選手名をカンマ区切りで入力">
         <button id="registerButton" class="register-btn">登録</button>
-        <button onclick="saveHTML()">履歴保存</button>
-        <button onclick="resetContent()">履歴リセット</button>    </div>
+        <button onclick="saveHTML()" id="saveHistoryButton" class="register-btn">履歴保存</button>
+        <button onclick="resetContent()" id="resetHistoryButton" class="register-btn">履歴リセット</button>
+    </div>
     <div class="history" id="history">
         <strong>移動履歴:</strong>
         <ul id="history-list"></ul>
