--- a/w_player/v20/index.html
+++ b/w_player/v20/index.html
@@ -22,6 +22,10 @@
         </div>
     </div>
     <div class="input-container">
+        <div id="timeDisplay">00:00:00</div>
+        <button id="startStopButton" class="stopwatch-btn">スタート</button>
+        <button id="resetButton" class="stopwatch-btn">リセット</button>
+
         <input type="text" id="playerNamesInput" class="input-box" placeholder="選手名をカンマ区切りで入力">
         <button id="registerButton" class="register-btn">登録</button>
         <button onclick="saveHTML()" id="saveHistoryButton" class="register-btn">履歴保存</button>
