--- a/w_player/v20/index.html
+++ b/w_player/v20/index.html
@@ -8,9 +8,11 @@
 </head>
 <body>
     <div class="stopwatch">
-    <div id="timeDisplay">00:00:00</div>
-        <button id="startStopButton" class="stopwatch-btn">スタート</button>
-        <button id="resetButton" class="stopwatch-btn">リセット</button>
+        <div id="timeDisplay">00:00:00</div>
+        <div class="buttons">
+            <button id="startStopButton" class="stopwatch-btn">スタート</button>
+            <button id="resetButton" class="stopwatch-btn">リセット</button>
+        </div>
     </div>
 
     <div class="input-container">
