--- a/w_player/v20/index.html
+++ b/w_player/v20/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="stopwatch">
-        <div id="timeDisplay">00:00:00</div>
+        <div id="timeDisplay">00:00:00</div><br>
         <div class="buttons">
             <button id="startStopButton" class="stopwatch-btn">スタート</button>
             <button id="resetButton" class="stopwatch-btn">リセット</button>
