--- a/w_player/v21/index.html
+++ b/w_player/v21/index.html
@@ -52,12 +52,18 @@
                 <option value="負傷">負傷</option>
                 <option value="HIA">HIA</option>
                 <option value="シンビン">シンビン</option>
-                <option value="復帰">復帰</option>
                 <option value="YC">YC</option>
                 <option value="RC">RC</option>
                 <option value="FPRO">FPRO</option>
                 <option value="FPRO/YC">FPRO/YC</option>
-                 <option value="FPRO/RC">FPRO/RC</option>               
+                <option value="FPRO/RC">FPRO/RC</option>
+                <option value="出血>>復帰">出血>>復帰</option>
+                <option value="負傷>>復帰">負傷>>復帰</option>
+                <option value="HIA>>復帰">HIA>>復帰</option>
+                <option value="シンビン>>復帰">シンビン>>復帰</option>
+                <option value="YC>>復帰">YC復帰</option>
+                <option value="FPRO>>復帰">FPRO>>復帰</option>
+                <option value="FPRO/YC>>復帰">FPRO/YC>>復帰</option>
                 <option value="-">-</option>
             </select>
             <button id="confirmReasonBtn">確定</button>
