--- a/w_player/v21/index.html
+++ b/w_player/v21/index.html
@@ -47,11 +47,16 @@
             <h3>移動理由を選択</h3>
             <select id="moveReason">
                 <option value="">理由を選択</option>
-                <option value="戦術">戦術</option>
-                <option value="出血">出血</option>
-                <option value="負傷">負傷</option>
-                <option value="HIA">HIA</option>
-                <option value="シンビン">シンビン</option>
+                <option value="戦術IN">戦術IN</option>
+                <option value="戦術OUT">戦術OUT</option>
+                <option value="出血IN">出血IN</option>
+                <option value="出血OUT">出血OUT</option>
+                <option value="負傷IN">負傷IN</option>
+                <option value="負傷OUT">負傷OUT</option>
+                <option value="HIA IN">HIA IN</option>
+                <option value="HIA OUT">HIA OUT</option>
+                <option value="シンビンIN">シンビンIN</option>
+                <option value="シンビンOUT">シンビンOUT</option>                
                 <option value="YC">YC</option>
                 <option value="RC">RC</option>
                 <option value="FPRO">FPRO</option>
@@ -59,8 +64,8 @@
                 <option value="FPRO/RC">FPRO/RC</option>
                 <option value="出血>>復帰">出血>>復帰</option>
                 <option value="負傷>>復帰">負傷>>復帰</option>
-                <option value="HIA>>復帰">HIA>>復帰</option>
-                <option value="シンビン>>復帰">シンビン>>復帰</option>
+                <option value="HIA OUT>>復帰">HIA OUT>>復帰</option>
+                <option value="シンビOUTン>>復帰">シンビンOUT>>復帰</option>
                 <option value="YC>>復帰">YC復帰</option>
                 <option value="FPRO>>復帰">FPRO>>復帰</option>
                 <option value="FPRO/YC>>復帰">FPRO/YC>>復帰</option>
