--- a/w_player/v21/index.html
+++ b/w_player/v21/index.html
@@ -13,6 +13,11 @@
             <button id="startStopButton" class="stopwatch-btn">スタート</button>
             <button id="resetButton" class="stopwatch-btn">リセット</button>
         </div>
+        <br>
+        <div class="adjustment">
+            <input type="number" id="adjustSeconds" placeholder="秒数を入力" />
+            <button id="adjustButton" class="stopwatch-btn">調整</button>
+        </div>
     </div>
 
     <div class="input-container">
