--- a/w_player/v23/index.html
+++ b/w_player/v23/index.html
@@ -94,6 +94,25 @@
             <button id="cancelReasonBtn">キャンセル</button>
         </div>
     </div>
+
+    <div id="reasonModal2" class="modal">
+        <div class="modal-content">
+            <h3>移動理由を選択</h3>
+            <select id="moveReason">
+                <option value="">理由を選択</option>      
+                <option value="戦術">戦術</option>                
+                <option value="出血">出血</option>                
+                <option value="負傷">負傷O</option>                
+                <option value="HIA">HIA</option>       
+                <option value="シンビン">シンビン</option>                  
+                <option value="---">---</option>    
+            </select>
+            <button id="confirmReasonBtn">確定</button>
+            <button id="cancelReasonBtn">キャンセル</button>
+        </div>
+    </div>
+
+
     <script src="script.js"></script>
 </body>
 </html>
