--- a/w_player/v23/index.html
+++ b/w_player/v23/index.html
@@ -97,7 +97,7 @@
 
     <div id="reasonModal2" class="modal">
         <div class="modal-content">
-            <h3>移動理由を選択</h3>
+            <h3>交代理由を選択</h3>
             <select id="moveReason">
                 <option value="">理由を選択</option>      
                 <option value="戦術">戦術</option>                
