--- a/w_player/v23/index.html
+++ b/w_player/v23/index.html
@@ -102,7 +102,7 @@
                 <option value="">理由を選択</option>      
                 <option value="戦術">戦術</option>                
                 <option value="出血">出血</option>                
-                <option value="負傷">負傷O</option>                
+                <option value="負傷">負傷</option>                
                 <option value="HIA">HIA</option>       
                 <option value="シンビン">シンビン</option>                    
             </select>
