--- a/w_player/v24/index.html
+++ b/w_player/v24/index.html
@@ -27,6 +27,9 @@
         <button id="registerButton" class="register-btn">登録</button>
         <button onclick="saveHTML()" id="saveHistoryButton" class="register-btn">履歴保存</button>
         <button onclick="resetContent()" id="resetHistoryButton" class="register-btn">履歴リセット</button>
+
+        <div id="display"></div>
+        
     </div>
 
     <div class="container">
