--- a/w_player/v27/index.html
+++ b/w_player/v27/index.html
@@ -55,25 +55,11 @@
             <h3>移動理由を選択</h3>
             <select id="moveReason">
                 <option value="">理由を選択</option>
-   
-                <option value="出血OUT>>復帰">出血OUT>>復帰</option>
-                <option value="出血IN>>OUT">出血IN>>OUT</option>
-       
-                <option value="HIA OUT>>復帰">HIA OUT>>復帰</option>
-                <option value="HIA IN>>OUT">HIA IN>>OUT</option>
-                 
-                <option value="シンビンOUT>>復帰">シンビンOUT>>復帰</option>
-                <option value="シンビンIN>>OUT">シンビンIN>>OUT</option>
-
-                <option value="---">---</option>
-
                 <option value="YC">YC</option>
-                <option value="YC>>復帰">YC>>復帰</option>
-
                 <option value="RC">RC</option>
-
                 <option value="FPRO">FPRO</option>
-                <option value="FPRO>>復帰">FPRO>>復帰</option>
+                <option value="YC復帰">YC復帰</option>
+                <option value="FPRO復帰">FPRO復帰</option>
 
             </select>
             <button id="confirmReasonBtn">確定</button>
@@ -87,10 +73,13 @@
         <select id="moveReason">
             <option value="">理由を選択</option>
             <option value="戦術">戦術</option>
-            <option value="出血">出血</option>
             <option value="負傷">負傷</option>
+            <option value="出血">出血</option>
             <option value="HIA">HIA</option>
             <option value="シンビン">シンビン</option>
+            <option value="出血復帰">出血復帰</option>
+            <option value="HIA復帰">HIA復帰</option>
+            <option value="シンビン復帰">シンビン復帰</option>
         </select>
         <div class="button-group">
             <button id="confirmReasonBtn">確定</button>
