--- a/w_player/v27/index.html
+++ b/w_player/v27/index.html
@@ -87,9 +87,8 @@
         </div>
     </div>
 </div>
-
-
     <script src="script.js"></script>
+    <script src="clockManager.js"></script>
 </body>
 
 </html>
