--- a/w_player/v33/index.html
+++ b/w_player/v33/index.html
@@ -57,6 +57,7 @@
                 <option value="RC">RC</option>
                 <option value="FPRO">FPRO</option>
                 <option value="YC復帰">YC復帰</option>
+                <option value="RC復帰">RC復帰</option>
                 <option value="FPRO復帰">FPRO復帰</option>
 
             </select>
@@ -77,6 +78,7 @@
             <option value="出血復帰">出血復帰</option>
             <option value="HIA復帰">HIA復帰</option>
             <option value="シンビン復帰">シンビン復帰</option>
+            <option value="P入替">P入替</option>
         </select>
         <div class="button-group">
             <button id="confirmReasonBtn">確定</button>
