--- a/w_player/v34/index.html
+++ b/w_player/v34/index.html
@@ -27,11 +27,9 @@
         <button id="registerButton" class="register-btn">登録</button>
         <button onclick="saveHTML()" id="saveHistoryButton" class="register-btn">履歴保存</button>
         <button onclick="resetContent()" id="resetButton" class="register-btn">リセット</button>
-
+        <button onclick="loadState()" id="restoreButton" class="register-btn">復元</button>
         <div id="display"></div>
-        
     </div>
-
 
 <div class="container">
     <div class="area" id="bench">
