--- a/y_redirect/index.html
+++ b/y_redirect/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="refresh" content="5;url=image.jpg">
     <script>
         setTimeout(() => {
-            window.location.href = "image.jpg";
+            window.location.href = "image.png";
         }, 5000); // 5秒後にリダイレクト
     </script>
 </head>
