--- a/y_redirect/index.html
+++ b/y_redirect/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Page 1</title>
-    <meta http-equiv="refresh" content="5;url=image.jpg">
+    <meta http-equiv="refresh" content="5;url=image.png">
     <script>
         setTimeout(() => {
             window.location.href = "image.png";
@@ -16,3 +16,4 @@
     <p>You will be redirected to an image in 5 seconds...</p>
 </body>
 </html>
+
