--- a/z_textbox/index.html
+++ b/z_textbox/index.html
@@ -50,10 +50,10 @@
 
 <body>
     <h1>テキスト入力とボタン押下</h1>
-    <label for="textInput">テキストを入力してください:</label><br>
+    <label for="text0">テキストを入力してください:</label><br>
     <!-- テキストボックスを大きくし、横幅を半分にし、paddingも設ける -->
-    <textarea id="textInput"></textarea><br>
-    <button id="button" onclick="displayInputContent()">表示</button>
+    <textarea id="text0"></textarea><br>
+    <button id="button0" onclick="displayInputContent()">表示</button>
     <!-- 結果表示エリア -->
     <p id="result"></p>
 </body>
