--- a/z_textbox/index.html
+++ b/z_textbox/index.html
@@ -53,7 +53,7 @@
     <label for="text0">テキストを入力してください:</label><br>
     <!-- テキストボックスを大きくし、横幅を半分にし、paddingも設ける -->
     <textarea id="text0"></textarea><br>
-    <button id="button0" onclick="displayInputContent()">表示</button>
+    <button id="button" onclick="displayInputContent()">表示</button>
     <!-- 結果表示エリア -->
     <p id="result"></p>
 </body>
