--- a/z01_text_box/index.html
+++ b/z01_text_box/index.html
@@ -41,15 +41,22 @@
       const savedText = localStorage.getItem('savedText');
       if (savedText) {
         document.getElementById('saved-text').innerText = savedText;
+        document.getElementById('saved-text').style.color = 'black'; // 既存のテキストは黒色で表示
       }
     };
 
     function saveText() {
       const text = document.getElementById('text-input').value;
-      if (text) {
+      const savedText = localStorage.getItem('savedText');
+
+      // 新しいテキストが既存の保存されたテキストと異なる場合のみ更新
+      if (text && text !== savedText) {
         localStorage.setItem('savedText', text); // ローカルストレージに保存
         document.getElementById('saved-text').innerText = text; // 画面に表示
         document.getElementById('saved-text').style.color = 'red'; // 新しい内容なので赤色
+      } else if (text === savedText) {
+        document.getElementById('saved-text').innerText = savedText; // 保存された内容を再表示
+        document.getElementById('saved-text').style.color = 'black'; // 既存のテキストは黒色
       }
     }
 
@@ -57,7 +64,6 @@
       // テキストエリアと表示を空にし、ローカルストレージもクリア
       document.getElementById('text-input').value = '';
       document.getElementById('saved-text').innerText = '';
-      document.getElementById('saved-text').style.color = 'black'; // 初期状態
       localStorage.removeItem('savedText'); // ローカルストレージから削除
     }
   </script>
