--- a/za01_textbox/index.html
+++ b/za01_textbox/index.html
@@ -29,6 +29,10 @@
     }
     .saved-text {
       font-size: 18px;
+      color: black; /* 既存のテキストは黒色 */
+    }
+    .new-text {
+      color: red; /* 新規のテキストは赤色 */
     }
   </style>
 </head>
@@ -47,7 +51,7 @@
       const savedTexts = localStorage.getItem('savedTexts');
       if (savedTexts) {
         const textsArray = JSON.parse(savedTexts); // ローカルストレージから取得したJSON文字列を配列に変換
-        displaySavedTexts(textsArray); // 保存されたテキストを表示
+        displaySavedTexts(textsArray, true); // 画面には隠す（過去の保存内容は黒色で非表示に）
       }
     };
 
@@ -63,30 +67,14 @@
         // ローカルストレージに更新されたテキストを保存
         localStorage.setItem('savedTexts', JSON.stringify(textsArray));
 
-        // テキストを表示
-        displaySavedTexts(textsArray);
+        // テキストを表示（新規のテキストは赤色）
+        displaySavedTexts(textsArray, false);
       }
     }
 
-    function displaySavedTexts(textsArray) {
+    function displaySavedTexts(textsArray, hideSaved) {
       const savedTextsDiv = document.getElementById('saved-texts');
       savedTextsDiv.innerHTML = ''; // 既存の表示をクリア
 
-      textsArray.forEach(text => {
-        const p = document.createElement('p');
-        p.classList.add('saved-text');
-        p.innerText = text;
-        p.style.color = 'black'; // 既存のテキストは黒色で表示
-        savedTextsDiv.appendChild(p);
-      });
-    }
-
-    function resetText() {
-      // ローカルストレージを削除し、表示もクリア
-      localStorage.removeItem('savedTexts');
-      document.getElementById('saved-texts').innerHTML = ''; // 画面上のテキストもクリア
-      document.getElementById('text-input').value = ''; // テキストエリアも空にする
-    }
-  </script>
-</body>
-</html>
+      // 画面には新しいテキストを赤色で表示し、過去のテキストは黒色で非表示
+      textsArray.forEach((
